--- a/starting/styles.css
+++ b/starting/styles.css
@@ -398,12 +398,6 @@
   }
 /* Universal */
 
-
-h1{
-    color:green;
-    background-color: black;
-}
-
 h3{
     text-align: center;
 }
@@ -443,6 +437,7 @@ h3{
 .font_section{
     border: 1px solid black;
     width: 1400px;
+    text-align: center;
 }
 
 
@@ -451,6 +446,8 @@ h3{
     margin: 10px;
     padding: 5px;
     width: 550px;
+    text-align: center;
+    display: inline-block;
 }
 
 .openSans{
@@ -491,9 +488,27 @@ h3{
     border: 1px solid black;
     margin: 10px;
     padding: 10px;
-    width: 1200px;
+    width: 1500px;
 }
 
-#textStyle_1,  #textStyle_2, #textStyle_3{
-    
+.textStyle_section h3{
+    text-align: left;
+}
+
+.textStyle_section h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 60px;
+}
+
+.textStyle_section h2{
+    font-family: 'Zen Dots', cursive;
+    font-weight: 400;
+    font-size: 40px;
+}
+
+.textStyle_section p{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
 }
